--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "easee"
 version = "0.1.0"
 edition = "2021"
 authors = ["Maxime Augier <max@xolus.net>"]
+description = "Rust bindings for the Easee cloud API for EV charging devices"
+readme = "README.md"
+repository = "https://github.com/maugier/easee-rs"
+license = "GPL-3.0"
+keywords = ["easee"]
+categories = ["api-bindings"]
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
